# ocr_pyton_sample

./: .gitignore  README.md  main.py  pyproject.toml
outputs/: .gitkeep
temp/: .gitkeep
